VS: Add [CMAKE_]VS_USE_DEBUG_LIBRARIES options to control UseDebugLibraries

This indicates to MSBuild which configurations are considered debug
configurations.  This is useful for reference both by humans and tools.

Issue: #25327